Updated README file

--- a/about.html
+++ b/about.html
@@ -78,8 +78,7 @@
                                     <div class="col-12">
                                         <p>getquote uses a very simple algorithm to generate random 'quotes' between 1 to 5. The words
                                             and phrases used are stocked in 3 arrays.</p>
-                                        <p>Please enjoy it and send any feedback to @nooutidev on Twitter, Facebook and
-                                            Instagram.</p>
+                                        <p>Please enjoy it and send any feedback to @JuniorOreol on Twitter.</p>
                                         <p>This site is intended for entertainment purposes only. It in no way reflects
                                             the thoughts of getquote.</p>
                                     </div>
