--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         </div>
                     </div>
 
-                </div>color
+                </div>
             </div>
             <div class="col-md-6" style="background-color:white;">
                 <div class="row mt-5">
